feat: Implement branding, logo, colors, icons, and documentation

--- a/app.json
+++ b/app.json
@@ -1,34 +1,35 @@
+
 {
   "expo": {
-    "name": "3S Global",
-    "slug": "3S Global",
+    "name": "Universal Shipping Services",
+    "slug": "universal-shipping-services",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/natively-dark.png",
+    "icon": "./assets/images/uss-logo.png",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "splash": {
-      "image": "./assets/images/natively-dark.png",
+      "image": "./assets/images/uss-logo.png",
       "resizeMode": "contain",
-      "backgroundColor": "#000000"
+      "backgroundColor": "#002C5F"
     },
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.anonymous.Natively",
+      "bundleIdentifier": "com.uss.global",
       "infoPlist": {
         "ITSAppUsesNonExemptEncryption": false
       }
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/images/natively-dark.png",
-        "backgroundColor": "#000000"
+        "foregroundImage": "./assets/images/uss-logo.png",
+        "backgroundColor": "#002C5F"
       },
       "edgeToEdgeEnabled": true,
-      "package": "com.anonymous.Natively"
+      "package": "com.uss.global"
     },
     "web": {
-      "favicon": "./assets/images/final_quest_240x240.png",
+      "favicon": "./assets/images/uss-logo.png",
       "bundler": "metro"
     },
     "plugins": [
@@ -36,7 +37,7 @@
       "expo-router",
       "expo-web-browser"
     ],
-    "scheme": "natively",
+    "scheme": "uss",
     "experiments": {
       "typedRoutes": true
     },
@@ -44,5 +45,5 @@
       "router": {}
     }
   },
-  "scheme": "3S Global"
+  "scheme": "universal-shipping-services"
 }
