--- a/app.json
+++ b/app.json
@@ -5,11 +5,11 @@
     "slug": "universal-shipping-services",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/uss-logo.png",
+    "icon": "./assets/images/final_quest_240x240.png",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "splash": {
-      "image": "./assets/images/uss-logo.png",
+      "image": "./assets/images/final_quest_240x240.png",
       "resizeMode": "contain",
       "backgroundColor": "#002C5F"
     },
@@ -22,14 +22,14 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/images/uss-logo.png",
+        "foregroundImage": "./assets/images/final_quest_240x240.png",
         "backgroundColor": "#002C5F"
       },
       "edgeToEdgeEnabled": true,
       "package": "com.uss.global"
     },
     "web": {
-      "favicon": "./assets/images/uss-logo.png",
+      "favicon": "./assets/images/final_quest_240x240.png",
       "bundler": "metro"
     },
     "plugins": [
@@ -44,6 +44,5 @@
     "extra": {
       "router": {}
     }
-  },
-  "scheme": "universal-shipping-services"
+  }
 }
