docs: Add Stripe payment integration summary document

--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,13 @@ EXPO_PUBLIC_GOOGLE_WEB_CLIENT_ID=your-google-web-client-id.apps.googleuserconten
 # Optional: Google Client Secret (for server-side operations)
 # GOOGLE_CLIENT_SECRET=your-google-client-secret-here
 
+# Stripe Configuration (TEST MODE)
+# Get these from Stripe Dashboard > Developers > API keys
+# Use test keys (starting with pk_test_ and sk_test_) for development
+EXPO_PUBLIC_STRIPE_PUBLISHABLE_KEY=pk_test_your_stripe_publishable_key_here
+STRIPE_SECRET_KEY=sk_test_your_stripe_secret_key_here
+STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret_here
+
 # App Configuration
 EXPO_PUBLIC_APP_NAME=Universal Shipping Services
 EXPO_PUBLIC_APP_VERSION=1.0.0
