--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@react-navigation/drawer": "^7.1.1",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
+    "@stripe/stripe-react-native": "^0.57.0",
     "@supabase/supabase-js": "^2.81.1",
     "@types/difflib": "^0.2.7",
     "difflib": "^0.2.4",
@@ -60,6 +61,7 @@
     "react-native-webview": "^13.15.0",
     "react-native-worklets": "0.5.1",
     "react-router-dom": "^7.1.3",
+    "stripe": "^20.0.0",
     "workbox-cli": "^7.3.0",
     "workbox-precaching": "^7.3.0",
     "workbox-webpack-plugin": "^7.3.0"
