--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,60 @@
 
-# Supabase Configuration
+# ============================================
+# ENVIRONMENT CONFIGURATION
+# ============================================
+# Set to 'dev', 'staging', or 'production'
+APP_ENV=dev
+
+# ============================================
+# SUPABASE CONFIGURATION
+# ============================================
+# Get these from your Supabase project settings
 EXPO_PUBLIC_SUPABASE_URL=https://lnfsjpuffrcyenuuoxxk.supabase.co
 EXPO_PUBLIC_SUPABASE_ANON_KEY=your-supabase-anon-key-here
 
-# Google Authentication
+# Service key (for backend/Edge Functions only - NEVER expose to client)
+SUPABASE_SERVICE_KEY=your-supabase-service-key-here
+
+# ============================================
+# STRIPE CONFIGURATION
+# ============================================
+# Get these from Stripe Dashboard > Developers > API keys
+# Use test keys (pk_test_/sk_test_) for dev/staging
+# Use live keys (pk_live_/sk_live_) for production
+
+# Public key (safe to expose to client)
+EXPO_PUBLIC_STRIPE_PUBLISHABLE_KEY=pk_test_your_stripe_publishable_key_here
+
+# Secret key (for backend/Edge Functions only - NEVER expose to client)
+STRIPE_SECRET_KEY=sk_test_your_stripe_secret_key_here
+
+# Webhook secret (for verifying Stripe webhook signatures)
+STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret_here
+
+# ============================================
+# GOOGLE MAPS CONFIGURATION
+# ============================================
+# Get this from Google Cloud Console > APIs & Services > Credentials
+EXPO_PUBLIC_GOOGLE_MAPS_API_KEY=your-google-maps-api-key-here
+
+# ============================================
+# SMTP CONFIGURATION (Email Service)
+# ============================================
+# Configure your SMTP server for sending emails
+SMTP_HOST=smtp.example.com
+SMTP_PORT=587
+SMTP_USERNAME=your-smtp-username
+SMTP_PASSWORD=your-smtp-password
+
+# ============================================
+# ADMIN CONFIGURATION
+# ============================================
+# Comma-separated list of admin email addresses
+ADMIN_EMAILS=cheikh@universalshipping.com,admin@universalshipping.com
+
+# ============================================
+# GOOGLE AUTHENTICATION (Optional)
+# ============================================
 # Get this from Google Cloud Console > APIs & Services > Credentials
 # Create an OAuth 2.0 Client ID for Web application
 EXPO_PUBLIC_GOOGLE_WEB_CLIENT_ID=your-google-web-client-id.apps.googleusercontent.com
@@ -11,21 +62,17 @@ EXPO_PUBLIC_GOOGLE_WEB_CLIENT_ID=your-google-web-client-id.apps.googleuserconten
 # Optional: Google Client Secret (for server-side operations)
 # GOOGLE_CLIENT_SECRET=your-google-client-secret-here
 
-# Stripe Configuration (TEST MODE)
-# Get these from Stripe Dashboard > Developers > API keys
-# Use test keys (starting with pk_test_ and sk_test_) for development
-EXPO_PUBLIC_STRIPE_PUBLISHABLE_KEY=pk_test_your_stripe_publishable_key_here
-STRIPE_SECRET_KEY=sk_test_your_stripe_secret_key_here
-STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret_here
-
-# App Configuration
+# ============================================
+# APP CONFIGURATION
+# ============================================
 EXPO_PUBLIC_APP_NAME=Universal Shipping Services
 EXPO_PUBLIC_APP_VERSION=1.0.0
 
-# Email Configuration
 # Email redirect URL for verification
 EXPO_PUBLIC_EMAIL_REDIRECT_URL=https://natively.dev/email-confirmed
 
-# Development
+# ============================================
+# DEVELOPMENT SETTINGS
+# ============================================
 # Set to 'development' for local development, 'production' for production
 NODE_ENV=development
