docs: Add PayPal implementation summary and setup guide

--- a/.env.example
+++ b/.env.example
@@ -1,78 +1,127 @@
 
-# ============================================
-# ENVIRONMENT CONFIGURATION
-# ============================================
-# Set to 'dev', 'staging', or 'production'
+# Environment Configuration Example
+# Copy this file to .env and fill in your values
+# NEVER commit .env to version control
+
+# =============================================================================
+# GENERAL CONFIGURATION
+# =============================================================================
+
+# Application environment: "dev" or "production"
 APP_ENV=dev
 
-# ============================================
+# Admin email addresses (comma-separated)
+ADMIN_EMAILS=admin@example.com,admin2@example.com
+
+# =============================================================================
 # SUPABASE CONFIGURATION
-# ============================================
-# Get these from your Supabase project settings
-EXPO_PUBLIC_SUPABASE_URL=https://lnfsjpuffrcyenuuoxxk.supabase.co
-EXPO_PUBLIC_SUPABASE_ANON_KEY=your-supabase-anon-key-here
+# =============================================================================
 
-# Service key (for backend/Edge Functions only - NEVER expose to client)
-SUPABASE_SERVICE_KEY=your-supabase-service-key-here
+# Supabase project URL (public)
+EXPO_PUBLIC_SUPABASE_URL=https://your-project.supabase.co
 
-# ============================================
-# STRIPE CONFIGURATION
-# ============================================
-# Get these from Stripe Dashboard > Developers > API keys
-# Use test keys (pk_test_/sk_test_) for dev/staging
-# Use live keys (pk_live_/sk_live_) for production
+# Supabase anonymous key (public)
+EXPO_PUBLIC_SUPABASE_ANON_KEY=your_anon_key_here
 
-# Public key (safe to expose to client)
-EXPO_PUBLIC_STRIPE_PUBLISHABLE_KEY=pk_test_your_stripe_publishable_key_here
+# Supabase service role key (secret - backend only)
+SUPABASE_SERVICE_ROLE_KEY=your_service_role_key_here
 
-# Secret key (for backend/Edge Functions only - NEVER expose to client)
-STRIPE_SECRET_KEY=sk_test_your_stripe_secret_key_here
+# =============================================================================
+# PAYMENT CONFIGURATION
+# =============================================================================
 
-# Webhook secret (for verifying Stripe webhook signatures)
-STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret_here
+# Active payment provider: "paypal" or "stripe"
+PAYMENT_PROVIDER=paypal
 
-# ============================================
+# =============================================================================
+# PAYPAL CONFIGURATION
+# =============================================================================
+
+# PayPal environment: "sandbox" or "live"
+# Use "sandbox" for development, "live" for production
+PAYPAL_ENV=sandbox
+
+# PayPal client ID (public - frontend)
+# Get from: https://developer.paypal.com/dashboard/applications/sandbox
+EXPO_PUBLIC_PAYPAL_CLIENT_ID=your_paypal_client_id_here
+
+# PayPal client secret (secret - backend only)
+# Get from: https://developer.paypal.com/dashboard/applications/sandbox
+PAYPAL_CLIENT_SECRET=your_paypal_client_secret_here
+
+# PayPal webhook ID (secret - backend only)
+# Get from: https://developer.paypal.com/dashboard/webhooks
+PAYPAL_WEBHOOK_ID=your_paypal_webhook_id_here
+
+# =============================================================================
+# STRIPE CONFIGURATION (LEGACY - Optional if using PayPal)
+# =============================================================================
+
+# Stripe publishable key (public - frontend)
+EXPO_PUBLIC_STRIPE_PUBLISHABLE_KEY=pk_test_your_key_here
+
+# Stripe secret key (secret - backend only)
+STRIPE_SECRET_KEY=sk_test_your_key_here
+
+# Stripe webhook secret (secret - backend only)
+STRIPE_WEBHOOK_SECRET=whsec_your_secret_here
+
+# =============================================================================
 # GOOGLE MAPS CONFIGURATION
-# ============================================
-# Get this from Google Cloud Console > APIs & Services > Credentials
-EXPO_PUBLIC_GOOGLE_MAPS_API_KEY=your-google-maps-api-key-here
+# =============================================================================
 
-# ============================================
-# SMTP CONFIGURATION (Email Service)
-# ============================================
-# Configure your SMTP server for sending emails
-SMTP_HOST=smtp.example.com
+# Google Maps API key (public - frontend)
+# Get from: https://console.cloud.google.com/apis/credentials
+EXPO_PUBLIC_GOOGLE_MAPS_API_KEY=your_google_maps_api_key_here
+
+# =============================================================================
+# SMTP CONFIGURATION (Email Notifications)
+# =============================================================================
+
+# SMTP server hostname
+SMTP_HOST=smtp.gmail.com
+
+# SMTP server port (usually 587 for TLS)
 SMTP_PORT=587
-SMTP_USERNAME=your-smtp-username
-SMTP_PASSWORD=your-smtp-password
 
-# ============================================
-# ADMIN CONFIGURATION
-# ============================================
-# Comma-separated list of admin email addresses
-ADMIN_EMAILS=cheikh@universalshipping.com,admin@universalshipping.com
+# SMTP authentication username
+SMTP_USERNAME=noreply@example.com
 
-# ============================================
-# GOOGLE AUTHENTICATION (Optional)
-# ============================================
-# Get this from Google Cloud Console > APIs & Services > Credentials
-# Create an OAuth 2.0 Client ID for Web application
-EXPO_PUBLIC_GOOGLE_WEB_CLIENT_ID=your-google-web-client-id.apps.googleusercontent.com
+# SMTP authentication password
+SMTP_PASSWORD=your_smtp_password_here
 
-# Optional: Google Client Secret (for server-side operations)
-# GOOGLE_CLIENT_SECRET=your-google-client-secret-here
+# =============================================================================
+# NOTES
+# =============================================================================
 
-# ============================================
-# APP CONFIGURATION
-# ============================================
-EXPO_PUBLIC_APP_NAME=Universal Shipping Services
-EXPO_PUBLIC_APP_VERSION=1.0.0
+# 1. For development, use PayPal sandbox credentials
+# 2. For production, use PayPal live credentials
+# 3. Never commit this file with real credentials
+# 4. Set these variables in Supabase Dashboard for Edge Functions
+# 5. Variables prefixed with EXPO_PUBLIC_ are safe to expose to frontend
+# 6. All other variables should be kept secret (backend only)
 
-# Email redirect URL for verification
-EXPO_PUBLIC_EMAIL_REDIRECT_URL=https://natively.dev/email-confirmed
+# =============================================================================
+# QUICK SETUP GUIDE
+# =============================================================================
 
-# ============================================
-# DEVELOPMENT SETTINGS
-# ============================================
-# Set to 'development' for local development, 'production' for production
-NODE_ENV=development
+# 1. Copy this file: cp .env.example .env
+# 2. Fill in your credentials
+# 3. Set variables in Supabase Dashboard:
+#    Project Settings → Edge Functions → Environment Variables
+# 4. Deploy Edge Functions:
+#    supabase functions deploy create-paypal-order
+#    supabase functions deploy paypal-webhook
+# 5. Test in sandbox before going live
+
+# =============================================================================
+# SECURITY CHECKLIST
+# =============================================================================
+
+# ✓ Never commit .env to version control
+# ✓ Use sandbox credentials for development
+# ✓ Use live credentials for production only
+# ✓ Keep client secrets and webhook IDs secret
+# ✓ Rotate credentials regularly
+# ✓ Use different credentials for each environment
+# ✓ Enable webhook signature verification in production
