--- a/app.json
+++ b/app.json
@@ -46,6 +46,9 @@
       "supabaseUrl": "${EXPO_PUBLIC_SUPABASE_URL}",
       "supabaseAnonKey": "${EXPO_PUBLIC_SUPABASE_ANON_KEY}",
       "stripePublishableKey": "${EXPO_PUBLIC_STRIPE_PUBLISHABLE_KEY}",
+      "paypalClientId": "${EXPO_PUBLIC_PAYPAL_CLIENT_ID}",
+      "paypalEnv": "${PAYPAL_ENV}",
+      "paymentProvider": "${PAYMENT_PROVIDER}",
       "googleMapsApiKey": "${EXPO_PUBLIC_GOOGLE_MAPS_API_KEY}"
     }
   },
