feat: Document environment variables and setup for Natively

--- a/.env.example
+++ b/.env.example
@@ -1,36 +1,56 @@
 
-# Environment Configuration Example
-# Copy this file to .env and fill in your values
-# NEVER commit .env to version control
+# =============================================================================
+# ENVIRONMENT CONFIGURATION - 3S GLOBAL / UNIVERSAL SHIPPING SERVICES
+# =============================================================================
+# 
+# This file lists all environment variables required by the application.
+# Copy this file to .env and fill in your values for local development.
+# 
+# IMPORTANT: 
+# - NEVER commit .env to version control
+# - Set these variables in Natively's Environment Variables tab
+# - Variables prefixed with EXPO_PUBLIC_ are safe to expose to frontend
+# - All other variables should be kept secret (backend only)
+#
+# =============================================================================
 
 # =============================================================================
 # GENERAL CONFIGURATION
 # =============================================================================
 
 # Application environment: "dev" or "production"
+# - Use "dev" for development/testing
+# - Use "production" for live deployment
 APP_ENV=dev
 
 # Admin email addresses (comma-separated)
-ADMIN_EMAILS=admin@example.com,admin2@example.com
+# These emails receive admin notifications and have admin access
+ADMIN_EMAILS=cheikh@universalshipping.com
 
 # =============================================================================
 # SUPABASE CONFIGURATION
 # =============================================================================
 
-# Supabase project URL (public)
-EXPO_PUBLIC_SUPABASE_URL=https://your-project.supabase.co
+# Supabase project URL (public - safe to expose to frontend)
+# Get from: Supabase Dashboard → Project Settings → API
+EXPO_PUBLIC_SUPABASE_URL=https://lnfsjpuffrcyenuuoxxk.supabase.co
 
-# Supabase anonymous key (public)
+# Supabase anonymous key (public - safe to expose to frontend)
+# Get from: Supabase Dashboard → Project Settings → API
 EXPO_PUBLIC_SUPABASE_ANON_KEY=your_anon_key_here
 
-# Supabase service role key (secret - backend only)
-SUPABASE_SERVICE_ROLE_KEY=your_service_role_key_here
+# Supabase service role key (SECRET - backend only, never expose to frontend)
+# Get from: Supabase Dashboard → Project Settings → API
+# Used by Edge Functions for admin operations
+SUPABASE_SERVICE_KEY=your_service_role_key_here
 
 # =============================================================================
 # PAYMENT CONFIGURATION
 # =============================================================================
 
 # Active payment provider: "paypal" or "stripe"
+# Set to "paypal" to use PayPal for payments
+# Set to "stripe" to use Stripe for payments (legacy)
 PAYMENT_PROVIDER=paypal
 
 # =============================================================================
@@ -38,40 +58,36 @@ PAYMENT_PROVIDER=paypal
 # =============================================================================
 
 # PayPal environment: "sandbox" or "live"
-# Use "sandbox" for development, "live" for production
+# - Use "sandbox" for development/testing with test accounts
+# - Use "live" for production with real payments
+# IMPORTANT: Must match APP_ENV (sandbox for dev, live for production)
 PAYPAL_ENV=sandbox
 
-# PayPal client ID (public - frontend)
+# PayPal client ID (public - safe to expose to frontend)
 # Get from: https://developer.paypal.com/dashboard/applications/sandbox
+# For sandbox: Use "Sandbox" tab credentials
+# For live: Use "Live" tab credentials
 EXPO_PUBLIC_PAYPAL_CLIENT_ID=your_paypal_client_id_here
 
-# PayPal client secret (secret - backend only)
+# PayPal client secret (SECRET - backend only, never expose to frontend)
 # Get from: https://developer.paypal.com/dashboard/applications/sandbox
+# Used by Edge Functions to authenticate with PayPal API
 PAYPAL_CLIENT_SECRET=your_paypal_client_secret_here
 
-# PayPal webhook ID (secret - backend only)
+# PayPal webhook ID (SECRET - backend only)
 # Get from: https://developer.paypal.com/dashboard/webhooks
+# Used to verify webhook signatures for security
+# Create webhook with URL: https://lnfsjpuffrcyenuuoxxk.supabase.co/functions/v1/paypal-webhook
 PAYPAL_WEBHOOK_ID=your_paypal_webhook_id_here
-
-# =============================================================================
-# STRIPE CONFIGURATION (LEGACY - Optional if using PayPal)
-# =============================================================================
-
-# Stripe publishable key (public - frontend)
-EXPO_PUBLIC_STRIPE_PUBLISHABLE_KEY=pk_test_your_key_here
-
-# Stripe secret key (secret - backend only)
-STRIPE_SECRET_KEY=sk_test_your_key_here
-
-# Stripe webhook secret (secret - backend only)
-STRIPE_WEBHOOK_SECRET=whsec_your_secret_here
 
 # =============================================================================
 # GOOGLE MAPS CONFIGURATION
 # =============================================================================
 
-# Google Maps API key (public - frontend)
+# Google Maps API key (public - safe to expose to frontend)
 # Get from: https://console.cloud.google.com/apis/credentials
+# Used for: Port maps, location services, geocoding
+# Enable APIs: Maps JavaScript API, Geocoding API, Places API
 EXPO_PUBLIC_GOOGLE_MAPS_API_KEY=your_google_maps_api_key_here
 
 # =============================================================================
@@ -79,49 +95,145 @@ EXPO_PUBLIC_GOOGLE_MAPS_API_KEY=your_google_maps_api_key_here
 # =============================================================================
 
 # SMTP server hostname
+# Examples:
+# - Gmail: smtp.gmail.com
+# - SendGrid: smtp.sendgrid.net
+# - Mailgun: smtp.mailgun.org
+# - AWS SES: email-smtp.us-east-1.amazonaws.com
 SMTP_HOST=smtp.gmail.com
 
-# SMTP server port (usually 587 for TLS)
+# SMTP server port
+# Common ports:
+# - 587: TLS (recommended)
+# - 465: SSL
+# - 25: Unencrypted (not recommended)
 SMTP_PORT=587
 
 # SMTP authentication username
-SMTP_USERNAME=noreply@example.com
+# Usually your email address or SMTP username
+SMTP_USERNAME=noreply@universalshipping.com
 
 # SMTP authentication password
+# For Gmail: Use App Password (not your regular password)
+# Get from: Google Account → Security → 2-Step Verification → App Passwords
 SMTP_PASSWORD=your_smtp_password_here
 
 # =============================================================================
-# NOTES
+# STRIPE CONFIGURATION (LEGACY - Optional if using PayPal)
 # =============================================================================
 
-# 1. For development, use PayPal sandbox credentials
-# 2. For production, use PayPal live credentials
-# 3. Never commit this file with real credentials
-# 4. Set these variables in Supabase Dashboard for Edge Functions
-# 5. Variables prefixed with EXPO_PUBLIC_ are safe to expose to frontend
-# 6. All other variables should be kept secret (backend only)
+# Stripe publishable key (public - safe to expose to frontend)
+# Get from: https://dashboard.stripe.com/apikeys
+# Use test key (pk_test_...) for development
+# Use live key (pk_live_...) for production
+EXPO_PUBLIC_STRIPE_PUBLISHABLE_KEY=pk_test_your_key_here
+
+# Stripe secret key (SECRET - backend only, never expose to frontend)
+# Get from: https://dashboard.stripe.com/apikeys
+# Use test key (sk_test_...) for development
+# Use live key (sk_live_...) for production
+STRIPE_SECRET_KEY=sk_test_your_key_here
+
+# Stripe webhook secret (SECRET - backend only)
+# Get from: https://dashboard.stripe.com/webhooks
+# Used to verify webhook signatures for security
+STRIPE_WEBHOOK_SECRET=whsec_your_secret_here
 
 # =============================================================================
-# QUICK SETUP GUIDE
+# SETUP INSTRUCTIONS
 # =============================================================================
-
-# 1. Copy this file: cp .env.example .env
-# 2. Fill in your credentials
-# 3. Set variables in Supabase Dashboard:
-#    Project Settings → Edge Functions → Environment Variables
-# 4. Deploy Edge Functions:
-#    supabase functions deploy create-paypal-order
-#    supabase functions deploy paypal-webhook
-# 5. Test in sandbox before going live
-
+#
+# 1. LOCAL DEVELOPMENT:
+#    - Copy this file: cp .env.example .env
+#    - Fill in your credentials
+#    - Use sandbox/test credentials for development
+#
+# 2. NATIVELY ENVIRONMENT VARIABLES:
+#    - Go to Natively → Environment Variables tab
+#    - Add each variable listed above
+#    - Mark SECRET variables as "Secret" in Natively
+#    - Use sandbox credentials for test environment
+#    - Use live credentials for production environment
+#
+# 3. SUPABASE EDGE FUNCTIONS:
+#    - Go to Supabase Dashboard → Project Settings → Edge Functions
+#    - Add all SECRET variables (not EXPO_PUBLIC_ ones)
+#    - Variables needed by Edge Functions:
+#      * SUPABASE_SERVICE_KEY
+#      * PAYPAL_CLIENT_SECRET
+#      * PAYPAL_WEBHOOK_ID
+#      * PAYPAL_ENV
+#      * SMTP_HOST, SMTP_PORT, SMTP_USERNAME, SMTP_PASSWORD
+#      * APP_ENV
+#      * ADMIN_EMAILS
+#
+# 4. VERIFICATION:
+#    - Check ConfigStatus component in dev mode
+#    - Run configuration validation: appConfig.validateConfig()
+#    - Test payments in sandbox before going live
+#
+# =============================================================================
+# ENVIRONMENT-SPECIFIC VALUES
+# =============================================================================
+#
+# DEVELOPMENT (Sandbox):
+# ----------------------
+# APP_ENV=dev
+# PAYPAL_ENV=sandbox
+# EXPO_PUBLIC_PAYPAL_CLIENT_ID=<sandbox_client_id>
+# PAYPAL_CLIENT_SECRET=<sandbox_client_secret>
+# PAYPAL_WEBHOOK_ID=<sandbox_webhook_id>
+#
+# PRODUCTION (Live):
+# ------------------
+# APP_ENV=production
+# PAYPAL_ENV=live
+# EXPO_PUBLIC_PAYPAL_CLIENT_ID=<live_client_id>
+# PAYPAL_CLIENT_SECRET=<live_client_secret>
+# PAYPAL_WEBHOOK_ID=<live_webhook_id>
+#
 # =============================================================================
 # SECURITY CHECKLIST
 # =============================================================================
-
-# ✓ Never commit .env to version control
+#
+# ✓ Never commit .env to version control (.gitignore includes it)
 # ✓ Use sandbox credentials for development
 # ✓ Use live credentials for production only
-# ✓ Keep client secrets and webhook IDs secret
-# ✓ Rotate credentials regularly
+# ✓ Keep client secrets and webhook IDs secret (never expose to frontend)
+# ✓ Rotate credentials regularly (every 3-6 months)
 # ✓ Use different credentials for each environment
 # ✓ Enable webhook signature verification in production
+# ✓ Use App Passwords for Gmail SMTP (not regular password)
+# ✓ Restrict Google Maps API key to specific domains/apps
+# ✓ Monitor API usage and set up billing alerts
+#
+# =============================================================================
+# TROUBLESHOOTING
+# =============================================================================
+#
+# Issue: "Environment variable not set"
+# Solution: Check variable is set in Natively Environment Variables tab
+#
+# Issue: "PayPal authentication failed"
+# Solution: Verify client ID and secret match the environment (sandbox/live)
+#
+# Issue: "Webhook signature verification failed"
+# Solution: Ensure PAYPAL_WEBHOOK_ID matches the webhook in PayPal Dashboard
+#
+# Issue: "Using PayPal sandbox in production"
+# Solution: Set PAYPAL_ENV=live and use live credentials
+#
+# Issue: "Email not sending"
+# Solution: Check SMTP credentials and use App Password for Gmail
+#
+# =============================================================================
+# SUPPORT & DOCUMENTATION
+# =============================================================================
+#
+# - PayPal Developer: https://developer.paypal.com/dashboard/
+# - Supabase Dashboard: https://supabase.com/dashboard/project/lnfsjpuffrcyenuuoxxk
+# - Google Cloud Console: https://console.cloud.google.com/
+# - Application Docs: See docs/ENVIRONMENT_VARIABLES_REFERENCE.md
+# - PayPal Setup: See docs/PAYPAL_CONFIGURATION.md
+#
+# =============================================================================
