Docs: Add NEXT_STEPS_RECONFIGURATION.md with development options

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "3S Global",
-    "slug": "3S Global",
+    "name": "UNIVERSAL SHIPPING SERVICES",
+    "slug": "UNIVERSAL SHIPPING SERVICES",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/final_quest_240x240.png",
@@ -52,5 +52,5 @@
       "googleMapsApiKey": "${EXPO_PUBLIC_GOOGLE_MAPS_API_KEY}"
     }
   },
-  "scheme": "3S Global"
+  "scheme": "UNIVERSAL SHIPPING SERVICES"
 }
