--- a/.env.example
+++ b/.env.example
@@ -42,7 +42,8 @@ EXPO_PUBLIC_SUPABASE_ANON_KEY=your_anon_key_here
 # Supabase service role key (SECRET - backend only, never expose to frontend)
 # Get from: Supabase Dashboard → Project Settings → API
 # Used by Edge Functions for admin operations
-SUPABASE_SERVICE_KEY=your_service_role_key_here
+# NOTE: In Natively, use "SERVICE_ROLE_KEY" (without SUPABASE_ prefix)
+SERVICE_ROLE_KEY=your_service_role_key_here
 
 # =============================================================================
 # PAYMENT CONFIGURATION
@@ -140,6 +141,29 @@ STRIPE_SECRET_KEY=sk_test_your_key_here
 STRIPE_WEBHOOK_SECRET=whsec_your_secret_here
 
 # =============================================================================
+# NATIVELY ENVIRONMENT VARIABLE NAMING CONVENTIONS
+# =============================================================================
+#
+# IMPORTANT: Natively has specific naming restrictions:
+#
+# ✓ ALLOWED:
+#   - EXPO_PUBLIC_SUPABASE_URL (frontend-accessible)
+#   - EXPO_PUBLIC_SUPABASE_ANON_KEY (frontend-accessible)
+#   - SERVICE_ROLE_KEY (backend-only, no SUPABASE_ prefix)
+#   - PAYPAL_CLIENT_ID, PAYPAL_CLIENT_SECRET, etc.
+#
+# ✗ NOT ALLOWED:
+#   - SUPABASE_URL (use EXPO_PUBLIC_SUPABASE_URL instead)
+#   - SUPABASE_ANON_KEY (use EXPO_PUBLIC_SUPABASE_ANON_KEY instead)
+#   - SUPABASE_SERVICE_KEY (use SERVICE_ROLE_KEY instead)
+#
+# The error "Keys cannot start with 'SUPABASE_' prefix" means you need to:
+# 1. Use EXPO_PUBLIC_ prefix for frontend variables
+# 2. Use different names (like SERVICE_ROLE_KEY) for backend variables
+#
+# =============================================================================
+
+# =============================================================================
 # SETUP INSTRUCTIONS
 # =============================================================================
 #
@@ -154,12 +178,13 @@ STRIPE_WEBHOOK_SECRET=whsec_your_secret_here
 #    - Mark SECRET variables as "Secret" in Natively
 #    - Use sandbox credentials for test environment
 #    - Use live credentials for production environment
+#    - IMPORTANT: Follow naming conventions (no SUPABASE_ prefix for keys)
 #
 # 3. SUPABASE EDGE FUNCTIONS:
 #    - Go to Supabase Dashboard → Project Settings → Edge Functions
 #    - Add all SECRET variables (not EXPO_PUBLIC_ ones)
 #    - Variables needed by Edge Functions:
-#      * SUPABASE_SERVICE_KEY
+#      * SERVICE_ROLE_KEY (not SUPABASE_SERVICE_KEY)
 #      * PAYPAL_CLIENT_SECRET
 #      * PAYPAL_WEBHOOK_ID
 #      * PAYPAL_ENV
@@ -206,10 +231,15 @@ STRIPE_WEBHOOK_SECRET=whsec_your_secret_here
 # ✓ Use App Passwords for Gmail SMTP (not regular password)
 # ✓ Restrict Google Maps API key to specific domains/apps
 # ✓ Monitor API usage and set up billing alerts
+# ✓ Follow Natively naming conventions (no SUPABASE_ prefix)
 #
 # =============================================================================
 # TROUBLESHOOTING
 # =============================================================================
+#
+# Issue: "Keys cannot start with 'SUPABASE_' prefix"
+# Solution: Use EXPO_PUBLIC_SUPABASE_URL, EXPO_PUBLIC_SUPABASE_ANON_KEY, 
+#           and SERVICE_ROLE_KEY instead
 #
 # Issue: "Environment variable not set"
 # Solution: Check variable is set in Natively Environment Variables tab
