--- a/.eslintignore
+++ b/.eslintignore
@@ -1,11 +1,11 @@
-# Ignore generated files
-_expo/
-dist/
-web-build/
 
-# Ignore node modules
 node_modules/
-
-# Ignore build artifacts
-*.bundle.js
-*.bundle.js.map
+.expo/
+.expo-shared/
+dist/
+build/
+*.config.js
+babel.config.js
+metro.config.js
+workbox-config.js
+supabase/functions/
