--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "expo-location": "^19.0.7",
     "expo-network": "^8.0.7",
     "expo-router": "^6.0.0",
+    "expo-secure-store": "^15.0.7",
     "expo-splash-screen": "^31.0.8",
     "expo-status-bar": "~3.0.7",
     "expo-symbols": "^1.0.6",
