Feat: Prepare app for publication with documentation

--- a/app.json
+++ b/app.json
@@ -1,40 +1,62 @@
+
 {
   "expo": {
-    "name": "UNIVERSAL SHIPPING SERVICES",
-    "slug": "UNIVERSAL SHIPPING SERVICES",
+    "name": "Universal Shipping Services",
+    "slug": "universal-shipping-services",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/final_quest_240x240.png",
+    "icon": "./assets/images/app-icon.png",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "splash": {
-      "image": "./assets/images/final_quest_240x240.png",
+      "image": "./assets/images/splash-screen.png",
       "resizeMode": "contain",
       "backgroundColor": "#002C5F"
     },
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.uss.global",
+      "bundleIdentifier": "com.universalshippingservices.app",
+      "buildNumber": "1",
       "infoPlist": {
-        "ITSAppUsesNonExemptEncryption": false
+        "ITSAppUsesNonExemptEncryption": false,
+        "NSLocationWhenInUseUsageDescription": "This app uses your location to show nearby ports and shipping routes on the map.",
+        "NSLocationAlwaysUsageDescription": "This app uses your location to provide accurate shipping and logistics services.",
+        "NSCameraUsageDescription": "This app needs access to your camera to upload documents and photos for shipments.",
+        "NSPhotoLibraryUsageDescription": "This app needs access to your photo library to upload documents and photos for shipments."
       }
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/images/final_quest_240x240.png",
+        "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#002C5F"
       },
       "edgeToEdgeEnabled": true,
-      "package": "com.uss.global"
+      "package": "com.universalshippingservices.app",
+      "versionCode": 1,
+      "permissions": [
+        "INTERNET",
+        "ACCESS_NETWORK_STATE",
+        "ACCESS_FINE_LOCATION",
+        "ACCESS_COARSE_LOCATION",
+        "CAMERA",
+        "READ_EXTERNAL_STORAGE",
+        "WRITE_EXTERNAL_STORAGE"
+      ]
     },
     "web": {
-      "favicon": "./assets/images/final_quest_240x240.png",
+      "favicon": "./assets/images/favicon.png",
       "bundler": "metro"
     },
     "plugins": [
       "expo-font",
       "expo-router",
-      "expo-web-browser"
+      "expo-web-browser",
+      [
+        "expo-location",
+        {
+          "locationAlwaysAndWhenInUsePermission": "This app uses your location to show nearby ports and shipping routes on the map."
+        }
+      ]
     ],
     "scheme": "uss",
     "experiments": {
@@ -48,8 +70,11 @@
       "stripePublishableKey": "${EXPO_PUBLIC_STRIPE_PUBLISHABLE_KEY}",
       "paypalClientId": "${EXPO_PUBLIC_PAYPAL_CLIENT_ID}",
       "paymentProvider": "${PAYMENT_PROVIDER}",
-      "googleMapsApiKey": "${EXPO_PUBLIC_GOOGLE_MAPS_API_KEY}"
-    }
-  },
-  "scheme": "UNIVERSAL SHIPPING SERVICES"
+      "googleMapsApiKey": "${EXPO_PUBLIC_GOOGLE_MAPS_API_KEY}",
+      "eas": {
+        "projectId": "your-eas-project-id"
+      }
+    },
+    "owner": "your-expo-username"
+  }
 }
