--- a/.env.example
+++ b/.env.example
@@ -1,269 +1,42 @@
 
-# =============================================================================
-# ENVIRONMENT CONFIGURATION - 3S GLOBAL / UNIVERSAL SHIPPING SERVICES
-# =============================================================================
-# 
-# This file lists all environment variables required by the application.
-# Copy this file to .env and fill in your values for local development.
-# 
-# IMPORTANT: 
-# - NEVER commit .env to version control
-# - Set these variables in Natively's Environment Variables tab
-# - Variables prefixed with EXPO_PUBLIC_ are safe to expose to frontend
-# - All other variables should be kept secret (backend only)
-#
-# =============================================================================
+# =================================================================
+# UNIVERSAL SHIPPING SERVICES - ENVIRONMENT VARIABLES
+# =================================================================
+# Copy this file to .env and fill in your actual values
+# NEVER commit .env to version control
+# =================================================================
 
-# =============================================================================
-# GENERAL CONFIGURATION
-# =============================================================================
-
-# Application environment: "dev" or "production"
-# - Use "dev" for development/testing
-# - Use "production" for live deployment
-APP_ENV=dev
-
-# Admin email addresses (comma-separated)
-# These emails receive admin notifications and have admin access
-ADMIN_EMAILS=cheikh@universalshipping.com
-
-# =============================================================================
+# -----------------------------------------------------------------
 # SUPABASE CONFIGURATION
-# =============================================================================
+# -----------------------------------------------------------------
+EXPO_PUBLIC_SUPABASE_URL=https://your-project.supabase.co
+EXPO_PUBLIC_SUPABASE_ANON_KEY=your-supabase-anon-key-here
 
-# Supabase project URL (public - safe to expose to frontend)
-# Get from: Supabase Dashboard → Project Settings → API
-EXPO_PUBLIC_SUPABASE_URL=https://lnfsjpuffrcyenuuoxxk.supabase.co
-
-# Supabase anonymous key (public - safe to expose to frontend)
-# Get from: Supabase Dashboard → Project Settings → API
-EXPO_PUBLIC_SUPABASE_ANON_KEY=your_anon_key_here
-
-# Supabase service role key (SECRET - backend only, never expose to frontend)
-# Get from: Supabase Dashboard → Project Settings → API
-# Used by Edge Functions for admin operations
-# NOTE: In Natively, use "SERVICE_ROLE_KEY" (without SUPABASE_ prefix)
-SERVICE_ROLE_KEY=your_service_role_key_here
-
-# =============================================================================
-# PAYMENT CONFIGURATION
-# =============================================================================
-
-# Active payment provider: "paypal" or "stripe"
-# Set to "paypal" to use PayPal for payments
-# Set to "stripe" to use Stripe for payments (legacy)
+# -----------------------------------------------------------------
+# PAYMENT PROVIDERS
+# -----------------------------------------------------------------
+# PayPal (Recommended)
+EXPO_PUBLIC_PAYPAL_CLIENT_ID=your-paypal-client-id-here
 PAYMENT_PROVIDER=paypal
 
-# =============================================================================
-# PAYPAL CONFIGURATION
-# =============================================================================
+# Stripe (Optional)
+EXPO_PUBLIC_STRIPE_PUBLISHABLE_KEY=pk_live_your-stripe-key-here
 
-# PayPal environment: "sandbox" or "live"
-# - Use "sandbox" for development/testing with test accounts
-# - Use "live" for production with real payments
-# IMPORTANT: Must match APP_ENV (sandbox for dev, live for production)
-PAYPAL_ENV=sandbox
+# -----------------------------------------------------------------
+# GOOGLE MAPS
+# -----------------------------------------------------------------
+EXPO_PUBLIC_GOOGLE_MAPS_API_KEY=your-google-maps-api-key-here
 
-# PayPal client ID (public - safe to expose to frontend)
-# Get from: https://developer.paypal.com/dashboard/applications/sandbox
-# For sandbox: Use "Sandbox" tab credentials
-# For live: Use "Live" tab credentials
-EXPO_PUBLIC_PAYPAL_CLIENT_ID=your_paypal_client_id_here
+# -----------------------------------------------------------------
+# APP ENVIRONMENT
+# -----------------------------------------------------------------
+# Options: development | staging | production
+APP_ENV=production
 
-# PayPal client secret (SECRET - backend only, never expose to frontend)
-# Get from: https://developer.paypal.com/dashboard/applications/sandbox
-# Used by Edge Functions to authenticate with PayPal API
-PAYPAL_CLIENT_SECRET=your_paypal_client_secret_here
-
-# PayPal webhook ID (SECRET - backend only)
-# Get from: https://developer.paypal.com/dashboard/webhooks
-# Used to verify webhook signatures for security
-# Create webhook with URL: https://lnfsjpuffrcyenuuoxxk.supabase.co/functions/v1/paypal-webhook
-PAYPAL_WEBHOOK_ID=your_paypal_webhook_id_here
-
-# =============================================================================
-# GOOGLE MAPS CONFIGURATION
-# =============================================================================
-
-# Google Maps API key (public - safe to expose to frontend)
-# Get from: https://console.cloud.google.com/apis/credentials
-# Used for: Port maps, location services, geocoding
-# Enable APIs: Maps JavaScript API, Geocoding API, Places API
-EXPO_PUBLIC_GOOGLE_MAPS_API_KEY=your_google_maps_api_key_here
-
-# =============================================================================
-# SMTP CONFIGURATION (Email Notifications)
-# =============================================================================
-
-# SMTP server hostname
-# Examples:
-# - Gmail: smtp.gmail.com
-# - SendGrid: smtp.sendgrid.net
-# - Mailgun: smtp.mailgun.org
-# - AWS SES: email-smtp.us-east-1.amazonaws.com
-SMTP_HOST=smtp.gmail.com
-
-# SMTP server port
-# Common ports:
-# - 587: TLS (recommended)
-# - 465: SSL
-# - 25: Unencrypted (not recommended)
-SMTP_PORT=587
-
-# SMTP authentication username
-# Usually your email address or SMTP username
-SMTP_USERNAME=noreply@universalshipping.com
-
-# SMTP authentication password
-# For Gmail: Use App Password (not your regular password)
-# Get from: Google Account → Security → 2-Step Verification → App Passwords
-SMTP_PASSWORD=your_smtp_password_here
-
-# =============================================================================
-# STRIPE CONFIGURATION (LEGACY - Optional if using PayPal)
-# =============================================================================
-
-# Stripe publishable key (public - safe to expose to frontend)
-# Get from: https://dashboard.stripe.com/apikeys
-# Use test key (pk_test_...) for development
-# Use live key (pk_live_...) for production
-EXPO_PUBLIC_STRIPE_PUBLISHABLE_KEY=pk_test_your_key_here
-
-# Stripe secret key (SECRET - backend only, never expose to frontend)
-# Get from: https://dashboard.stripe.com/apikeys
-# Use test key (sk_test_...) for development
-# Use live key (sk_live_...) for production
-STRIPE_SECRET_KEY=sk_test_your_key_here
-
-# Stripe webhook secret (SECRET - backend only)
-# Get from: https://dashboard.stripe.com/webhooks
-# Used to verify webhook signatures for security
-STRIPE_WEBHOOK_SECRET=whsec_your_secret_here
-
-# =============================================================================
-# NATIVELY ENVIRONMENT VARIABLE NAMING CONVENTIONS
-# =============================================================================
-#
-# IMPORTANT: Natively has specific naming restrictions:
-#
-# ✓ ALLOWED:
-#   - EXPO_PUBLIC_SUPABASE_URL (frontend-accessible)
-#   - EXPO_PUBLIC_SUPABASE_ANON_KEY (frontend-accessible)
-#   - SERVICE_ROLE_KEY (backend-only, no SUPABASE_ prefix)
-#   - PAYPAL_CLIENT_ID, PAYPAL_CLIENT_SECRET, etc.
-#
-# ✗ NOT ALLOWED:
-#   - SUPABASE_URL (use EXPO_PUBLIC_SUPABASE_URL instead)
-#   - SUPABASE_ANON_KEY (use EXPO_PUBLIC_SUPABASE_ANON_KEY instead)
-#   - SUPABASE_SERVICE_KEY (use SERVICE_ROLE_KEY instead)
-#
-# The error "Keys cannot start with 'SUPABASE_' prefix" means you need to:
-# 1. Use EXPO_PUBLIC_ prefix for frontend variables
-# 2. Use different names (like SERVICE_ROLE_KEY) for backend variables
-#
-# =============================================================================
-
-# =============================================================================
-# SETUP INSTRUCTIONS
-# =============================================================================
-#
-# 1. LOCAL DEVELOPMENT:
-#    - Copy this file: cp .env.example .env
-#    - Fill in your credentials
-#    - Use sandbox/test credentials for development
-#
-# 2. NATIVELY ENVIRONMENT VARIABLES:
-#    - Go to Natively → Environment Variables tab
-#    - Add each variable listed above
-#    - Mark SECRET variables as "Secret" in Natively
-#    - Use sandbox credentials for test environment
-#    - Use live credentials for production environment
-#    - IMPORTANT: Follow naming conventions (no SUPABASE_ prefix for keys)
-#
-# 3. SUPABASE EDGE FUNCTIONS:
-#    - Go to Supabase Dashboard → Project Settings → Edge Functions
-#    - Add all SECRET variables (not EXPO_PUBLIC_ ones)
-#    - Variables needed by Edge Functions:
-#      * SERVICE_ROLE_KEY (not SUPABASE_SERVICE_KEY)
-#      * PAYPAL_CLIENT_SECRET
-#      * PAYPAL_WEBHOOK_ID
-#      * PAYPAL_ENV
-#      * SMTP_HOST, SMTP_PORT, SMTP_USERNAME, SMTP_PASSWORD
-#      * APP_ENV
-#      * ADMIN_EMAILS
-#
-# 4. VERIFICATION:
-#    - Check ConfigStatus component in dev mode
-#    - Run configuration validation: appConfig.validateConfig()
-#    - Test payments in sandbox before going live
-#
-# =============================================================================
-# ENVIRONMENT-SPECIFIC VALUES
-# =============================================================================
-#
-# DEVELOPMENT (Sandbox):
-# ----------------------
-# APP_ENV=dev
-# PAYPAL_ENV=sandbox
-# EXPO_PUBLIC_PAYPAL_CLIENT_ID=<sandbox_client_id>
-# PAYPAL_CLIENT_SECRET=<sandbox_client_secret>
-# PAYPAL_WEBHOOK_ID=<sandbox_webhook_id>
-#
-# PRODUCTION (Live):
-# ------------------
-# APP_ENV=production
-# PAYPAL_ENV=live
-# EXPO_PUBLIC_PAYPAL_CLIENT_ID=<live_client_id>
-# PAYPAL_CLIENT_SECRET=<live_client_secret>
-# PAYPAL_WEBHOOK_ID=<live_webhook_id>
-#
-# =============================================================================
-# SECURITY CHECKLIST
-# =============================================================================
-#
-# ✓ Never commit .env to version control (.gitignore includes it)
-# ✓ Use sandbox credentials for development
-# ✓ Use live credentials for production only
-# ✓ Keep client secrets and webhook IDs secret (never expose to frontend)
-# ✓ Rotate credentials regularly (every 3-6 months)
-# ✓ Use different credentials for each environment
-# ✓ Enable webhook signature verification in production
-# ✓ Use App Passwords for Gmail SMTP (not regular password)
-# ✓ Restrict Google Maps API key to specific domains/apps
-# ✓ Monitor API usage and set up billing alerts
-# ✓ Follow Natively naming conventions (no SUPABASE_ prefix)
-#
-# =============================================================================
-# TROUBLESHOOTING
-# =============================================================================
-#
-# Issue: "Keys cannot start with 'SUPABASE_' prefix"
-# Solution: Use EXPO_PUBLIC_SUPABASE_URL, EXPO_PUBLIC_SUPABASE_ANON_KEY, 
-#           and SERVICE_ROLE_KEY instead
-#
-# Issue: "Environment variable not set"
-# Solution: Check variable is set in Natively Environment Variables tab
-#
-# Issue: "PayPal authentication failed"
-# Solution: Verify client ID and secret match the environment (sandbox/live)
-#
-# Issue: "Webhook signature verification failed"
-# Solution: Ensure PAYPAL_WEBHOOK_ID matches the webhook in PayPal Dashboard
-#
-# Issue: "Using PayPal sandbox in production"
-# Solution: Set PAYPAL_ENV=live and use live credentials
-#
-# Issue: "Email not sending"
-# Solution: Check SMTP credentials and use App Password for Gmail
-#
-# =============================================================================
-# SUPPORT & DOCUMENTATION
-# =============================================================================
-#
-# - PayPal Developer: https://developer.paypal.com/dashboard/
-# - Supabase Dashboard: https://supabase.com/dashboard/project/lnfsjpuffrcyenuuoxxk
-# - Google Cloud Console: https://console.cloud.google.com/
-# - Application Docs: See docs/ENVIRONMENT_VARIABLES_REFERENCE.md
-# - PayPal Setup: See docs/PAYPAL_CONFIGURATION.md
-#
-# =============================================================================
+# =================================================================
+# NOTES:
+# - All client-side variables must start with EXPO_PUBLIC_
+# - Server-side variables (Edge Functions) are configured in Supabase
+# - For production builds, use live/production credentials
+# - For development, use sandbox/test credentials
+# =================================================================
