--- a/eas.json
+++ b/eas.json
@@ -1,3 +1,4 @@
+
 {
   "cli": {
     "version": ">= 5.0.0"
@@ -20,18 +21,14 @@
     },
     "production": {
       "autoIncrement": true,
+      "channel": "production",
       "env": {
         "APP_ENV": "production"
-      }
-    },
-    "production-ios": {
-      "extends": "production",
+      },
       "ios": {
+        "resourceClass": "m1-medium",
         "buildConfiguration": "Release"
-      }
-    },
-    "production-android": {
-      "extends": "production",
+      },
       "android": {
         "buildType": "app-bundle"
       }
